--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="dark_pink">#FFFF5A5A</color>
+    <color name="light_medium_gray">#80D1D1D1</color>
+    <color name="darker">#FF424242</color>
+    <color name="yellow">#FFFF8F00</color>
+    <color name="light_pink">#FFFFB9B9</color>
+
+    <color name="stroke_color">@color/light_medium_gray</color>
+    <color name="title_color">@color/darker</color>
+    <color name="description_color">@color/darker</color>
+    <color name="item_color">@color/darker</color>
+    <color name="placeholder_color">@color/light_pink</color>
 </resources>
