--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,17 @@
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="70dp"
-        app:tint="@color/white"
+        android:contentDescription="@string/add_recipe"
         app:srcCompat="@drawable/ic_dine"
-        android:contentDescription="@string/add_recipe" />
+        app:tint="@color/white" />
+
+    <com.alan.alansdk.button.AlanButton
+        android:id="@+id/alan_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="125dp"
+        app:button_horizontal_align="left" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
