--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.mlh.reciplease.HomeFragment"
+        android:name="com.mlh.reciplease.UI.Fragments.HomeFragment"
         android:label="@string/recipes"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_favourites"
-        android:name="com.mlh.reciplease.FavouritesFragment"
+        android:name="com.mlh.reciplease.UI.Fragments.FavouritesFragment"
         android:label="@string/favourites"
         tools:layout="@layout/fragment_favourites" />
 
     <fragment
         android:id="@+id/navigation_recipes"
-        android:name="com.mlh.reciplease.RecipesFragment"
+        android:name="com.mlh.reciplease.UI.Fragments.RecipesFragment"
         android:label="@string/my_recipes"
         tools:layout="@layout/fragment_recipes" />
 </navigation>
